--- a/public/css/master.css
+++ b/public/css/master.css
@@ -20,7 +20,7 @@ nav ul {
 }
 nav ul li {
 	display: table-cell;
-	width: 10%;
+	width: 1%;
 }
 nav ul li a {
 	padding: 3px 3px;
@@ -60,19 +60,17 @@ div#core {
 	margin-bottom: 20px;
 	min-width: 1150px;
 }
-section {
-	margin: 0 15px;
-}
+
 section#left {
-	width: 700px;
+	width:70%;
 	float: left;
 	height: 100%;
 }
 section#right {
+	width:30%;
 	float: left;
 	height: 100%;
 }
-
  
 /* clearfix */
 .clearfix:after {
@@ -218,4 +216,16 @@ tr.tradeRow td {
 	vertical-align:top;
 	padding-top: 5px;
 	padding-bottom: 10px;
+}
+
+.widget {
+	border: 1px solid;
+	border-radius: 13px;
+	padding: 10px;
+	background: #282838;
+	margin: 10px;
+}
+
+.widget h2 {
+	margin: 8px;
 }
